@@ -3,7 +3,6 @@ package com.swirlds.platform.gossip;
 
 import static com.swirlds.logging.legacy.LogMarker.EXCEPTION;
 
-import com.google.common.collect.ImmutableList;
 import com.hedera.hapi.node.base.SemanticVersion;
 import com.hedera.hapi.node.state.roster.Roster;
 import com.hedera.hapi.node.state.roster.RosterEntry;
@@ -11,6 +10,7 @@ import com.swirlds.common.context.PlatformContext;
 import com.swirlds.common.merkle.synchronization.config.ReconnectConfig;
 import com.swirlds.component.framework.model.WiringModel;
 import com.swirlds.component.framework.wires.input.BindableInputWire;
+import com.swirlds.component.framework.wires.input.NoInput;
 import com.swirlds.component.framework.wires.output.StandardOutputWire;
 import com.swirlds.platform.gossip.shadowgraph.AbstractShadowgraphSynchronizer;
 import com.swirlds.platform.gossip.shadowgraph.RpcShadowgraphSynchronizer;
@@ -31,7 +31,6 @@ import com.swirlds.platform.network.protocol.SyncProtocol;
 import com.swirlds.platform.network.protocol.rpc.RpcProtocol;
 import com.swirlds.platform.reconnect.ReconnectStateTeacherThrottle;
 import com.swirlds.platform.state.signed.ReservedSignedState;
-import com.swirlds.platform.wiring.NoInput;
 import com.swirlds.platform.wiring.components.Gossip;
 import com.swirlds.state.StateLifecycleManager;
 import edu.umd.cs.findbugs.annotations.NonNull;
@@ -66,7 +65,7 @@ public class SyncGossipModular implements Gossip {
     private static final Logger logger = LogManager.getLogger(SyncGossipModular.class);
 
     private final PeerCommunication network;
-    private final ImmutableList<Protocol> protocols;
+    private final List<Protocol> protocols;
     private final AbstractSyncProtocol<?> syncProtocol;
     private final FallenBehindMonitor fallenBehindMonitor;
     private final AbstractShadowgraphSynchronizer synchronizer;
@@ -79,16 +78,16 @@ public class SyncGossipModular implements Gossip {
     /**
      * Builds the gossip engine, depending on which flavor is requested in the configuration.
      *
-     * @param platformContext               the platform context
-     * @param threadManager                 the thread manager
-     * @param ownKeysAndCerts               private keys and public certificates for this node
-     * @param roster                        the current roster
-     * @param selfId                        this node's ID
-     * @param appVersion                    the version of the app
-     * @param stateLifecycleManager            manages the mutable state
-     * @param latestCompleteState           holds the latest signed state that has enough signatures to be verifiable
-     * @param intakeEventCounter            keeps track of the number of events in the intake pipeline from each peer
-     * @param fallenBehindMonitor           an instance of the fallenBehind Monitor which tracks if the node has fallen behind
+     * @param platformContext the platform context
+     * @param threadManager the thread manager
+     * @param ownKeysAndCerts private keys and public certificates for this node
+     * @param roster the current roster
+     * @param selfId this node's ID
+     * @param appVersion the version of the app
+     * @param stateLifecycleManager manages the mutable state
+     * @param latestCompleteState holds the latest signed state that has enough signatures to be verifiable
+     * @param intakeEventCounter keeps track of the number of events in the intake pipeline from each peer
+     * @param fallenBehindMonitor an instance of the fallenBehind Monitor which tracks if the node has fallen behind
      * @param reservedSignedStateResultPromise a mechanism to get a SignedState or block while it is not available
      */
     public SyncGossipModular(
@@ -181,7 +180,7 @@ public class SyncGossipModular implements Gossip {
 
         final ReconnectStateSyncProtocol reconnectStateSyncProtocol = createStateSyncProtocol(
                 platformContext, threadManager, latestCompleteState, reservedSignedStateResultPromise);
-        this.protocols = ImmutableList.of(
+        this.protocols = List.of(
                 HeartbeatProtocol.create(platformContext, this.network.getNetworkMetrics()),
                 reconnectStateSyncProtocol,
                 syncProtocol);
@@ -196,9 +195,9 @@ public class SyncGossipModular implements Gossip {
     /**
      * Utility method for creating ReconnectProtocol from shared state, while staying compatible with pre-refactor code
      *
-     * @param platformContext               the platform context
-     * @param threadManager                 the thread manager
-     * @param latestCompleteState           holds the latest signed state that has enough signatures to be verifiable
+     * @param platformContext the platform context
+     * @param threadManager the thread manager
+     * @param latestCompleteState holds the latest signed state that has enough signatures to be verifiable
      * @return constructed ReconnectProtocol
      */
     public ReconnectStateSyncProtocol createStateSyncProtocol(
@@ -234,7 +233,7 @@ public class SyncGossipModular implements Gossip {
      * can be a short moment when it will drop out of the network if disconnect happens at a bad moment. NOT THREAD
      * SAFE. Synchronize externally.
      *
-     * @param added   peers to be added
+     * @param added peers to be added
      * @param removed peers to be removed
      */
     public void addRemovePeers(@NonNull final List<PeerInfo> added, @NonNull final List<PeerInfo> removed) {
